tests/baselines/reference/asyncMethod9.errors.txt
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod9.ts(8,21): error TS1109: Expression expected.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod9.ts(8,24): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod9.ts (2 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    class C {
      async foo(): Promise<void> {
        var v = { [await]: foo }
                        ~
!!! error TS1109: Expression expected.
                           ~~~
!!! error TS2304: Cannot find name 'foo'.
      }
    }